@@ -1,2 +1,3 @@
 # containerJmx
 # containerJmx
+java --add-exports java.base/jdk.internal.platform=ALL-UNNAMED -javaagent:containerMetric-1.0-SNAPSHOT.jar  xx 
